# Portsecurity-Mikrotik-UnifiAP

./: .gitignore  EENVOUDIG_UITGELEGD.md  EINFACH_ERKLAERT.md  EXPLAINED_SIMPLY.md  PROMPT.md  README.md  pyproject.toml
ap_switch_watchdog/: __init__.py  cli.py  config.py  mikrotik_client.py  port_lists.py  routeros_script.py  unifi_client.py  watchdog.py
config/: config.example.yaml
freebsd/: Makefile  README.md
freebsd/files/: ap_switch_watchdog.in
scripts/: setup_switches.py
tests/: conftest.py  test_config.py  test_mikrotik_client.py  test_port_lists.py  test_routeros_script.py  test_setup_switches.py  test_unifi_client.py  test_watchdog.py
