[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ap-switch-watchdog"
version = "0.1.0"
description = "Watchdog that secures MikroTik switch ports based on UniFi AP connection state"
requires-python = ">=3.10"
dependencies = [
    "RouterOS-api>=0.21.0",
    "requests>=2.31",
    "PyYAML>=6.0",
]

[project.scripts]
ap-switch-watchdog = "ap_switch_watchdog.cli:main"
ap-switch-watchdog-setup = "scripts.setup_switches:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["ap_switch_watchdog*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
